2006-12-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Check for existence of /proc/cpuinfo before reading it
  - Set CONCURRENCY_LEVEL to 1 if no other value available
2006-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/splitconfig:
  - Blank lines before grep warnings (looks better in configure)
  - replaced "grepcode" variable with "GREPCODE"
  - Use "test -n" instead of "! test -z"
2006-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx:
  - absolute_cursor is about ready for use
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Added capability cap_table_column
  - Warning about deactivated connections and supports()
  - Re-use server_version() and protocol_version()
  - Activate connection before checking prepared-statements capability
  - Don't use PQexecPrepared() with old backends
 src/cursor.cxx:
  - Activate connection before checking scroll capability
 test/test085.cxx, test/test091.cxx, test/test092.cxx, test/test093.cxx:
  - Skip test if essential backend features missing
 tools/pqxx-fulltest:
  - New
  - Tests across all available combinations of frontends and backends
2006-12-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/result.cxx:
  - New exception class: undefined_column
  - New exception class: undefined_function
2006-12-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/result.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/pipeline.cxx,
 src/result.cxx, src/util.cxx:
  - result::swap() didn't swap protocol fields
  - Keep shared result data (apart from PGresult) in new "shared_data" object
  - Early provision for thread synchronization in result
  - Results remember the queries that yielded them
  - result::CheckStatus() no longer takes argument (no longer need 2 versions)
  - Radically changed result class definition
 test/test070.cxx:
  - Test new result::query()
2006-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>