@@ -1,3 +1,7 @@
+2006-12-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configitems, configure.ac.in, include/pqxx/connection_base.hxx,
+ src/connection_base.cxx:
+  - Support password encryption, thanks tometzky
 2006-12-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
  tools/pqxx-fulltest:
   - Check for existence of /proc/cpuinfo before reading it
